# Bibble

./: .gitignore  CMakeLists.txt  README.md
framework/: CMakeLists.txt
framework/include/Bibble/codegen/: Builder.h  Context.h  Type.h
framework/include/Bibble/codegen/pass/: CommonPass.h  Pass.h
framework/include/Bibble/codegen/pass/optimizer/: DeadCodeElimination.h
framework/include/Bibble/diagnostic/: Assert.h  Diagnostic.h  Log.h
framework/include/Bibble/parser/: ImportParser.h  Parser.h
framework/include/Bibble/parser/ast/: Node.h
framework/include/Bibble/parser/ast/expression/: BinaryExpression.h  BooleanLiteral.h  CallExpression.h  CastExpression.h  Integerliteral.h  MemberAccess.h  NewArrayExpression.h  NewExpression.h  NullLiteral.h  StringLiteral.h  UnaryExpression.h  VariableExpression.h
framework/include/Bibble/parser/ast/global/: ClassDeclaration.h  Function.h  GlobalVar.h  ImportStatement.h  InitBlock.h
framework/include/Bibble/parser/ast/statement/: BreakStatement.h  CompoundStatement.h  ContinueStatement.h  ForStatement.h  IfStatement.h  ReturnStatement.h  VariableDeclaration.h  WhileStatement.h
framework/include/Bibble/symbol/: Import.h  Scope.h
framework/include/Bibble/type/: ArrayType.h  BooleanType.h  CharType.h  ClassType.h  FunctionType.h  HandleType.h  IntegerType.h  Type.h  ViewType.h  VoidType.h
framework/include/Bible/codegen/: Builder.h  Context.h  Type.h
framework/include/Bible/diagnostic/: Diagnostic.h
framework/include/Bible/parser/: ImportParser.h  Parser.h
framework/include/Bible/parser/ast/: Node.h
framework/include/Bible/parser/ast/expression/: BinaryExpression.h  CallExpression.h  Integerliteral.h  VariableExpression.h
framework/include/Bible/parser/ast/global/: ClassDeclaration.h  Function.h
framework/include/Bible/symbol/: Import.h  Scope.h
framework/include/Bible/type/: BooleanType.h  CharType.h  ClassType.h  FunctionType.h  HandleType.h  IntegerType.h  Type.h  VoidType.h
framework/src/codegen/: Builder.cpp  Context.cpp
framework/src/codegen/pass/: CommonPass.cpp  Pass.cpp
framework/src/codegen/pass/optimizer/: DeadCodeElimination.cpp
framework/src/diagnostic/: Assert.cpp  Diagnostic.cpp  Log.cpp
framework/src/lexer/: Lexer.vlex
framework/src/parser/: ImportParser.cpp  Parser.cpp
framework/src/parser/ast/: Node.cpp
framework/src/parser/ast/expression/: BinaryExpression.cpp  BooleanLiteral.cpp  CallExpression.cpp  CastExpression.cpp  IntegerLiteral.cpp  MemberAccess.cpp  NewArrayExpression.cpp  NewExpression.cpp  NullLiteral.cpp  StringLiteral.cpp  UnaryExpression.cpp  VariableExpression.cpp
framework/src/parser/ast/global/: ClassDeclaration.cpp  Function.cpp  GlobalVar.cpp  ImportStatement.cpp  InitBlock.cpp
framework/src/parser/ast/statement/: BreakStatement.cpp  CompoundStatement.cpp  ContinueStatement.cpp  ForStatement.cpp  IfStatement.cpp  ReturnStatement.cpp  VariableDeclaration.cpp  WhileStatement.cpp
framework/src/symbol/: Import.cpp  Scope.cpp
framework/src/type/: ArrayType.cpp  BooleanType.cpp  CharType.cpp  ClassType.cpp  FunctionType.cpp  HandleType.cpp  IntegerType.cpp  Type.cpp  ViewType.cpp  VoidType.cpp
main/: CMakeLists.txt
main/include/: Compiler.h  HeaderBuilder.h  Platform.h  Subcommands.h
main/include/templates/: HeaderEnd.h  HeaderStart.h
main/src/: Compiler.cpp  HeaderBuilder.cpp  Platform.cpp  Subcommands.cpp  main.cpp
run/: Example.bible  bibbler.toml
run/src/: Main.bibble
run/src/std/: Arrays.bibble  ErrorHandling.bibble  Math.bibble  Primitives.bibble  Streams.bibble  Trap.bibble
run/src/std/io/: Files.bibble  Streams.bibble
run/src/std/platform/: OS.bibble
run/src/vm/: Initializer.bibble  System.bibble
run/std/: IO.bibble  IO.bible
run/test/: IOTest.bibble
